<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:padding="4dp"
    android:layout_margin="2dp"
    android:orientation="vertical"
    tools:context=".views.FragmentFirma">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/firme" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/signLayout"
        android:layout_width="match_parent"
        android:layout_height="480px"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etAclaracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_aclaracion"
            android:textSize="28sp"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonFirmayAclaracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/button_firma_y_aclaracion" />

        <Button
            android:id="@+id/buttonPasarAFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/button_firma_y_aclaracion2" />
    </LinearLayout>

</LinearLayout>